--- a/src/SCSS/Grid.scss
+++ b/src/SCSS/Grid.scss
@@ -8,11 +8,11 @@
         justify-content: center;
         align-items: center;
         
-        &:hover {
-            background: rgba(0, 0, 0, 0.75);
-            border-radius: 50%;
-            transform: scale(.9);
-        }
+        // &:hover {
+        //     background: rgba(0, 0, 0, 0.75);
+        //     border-radius: 50%;
+        //     transform: scale(.9);
+        // }
         
         .stone {
             height: 90%;
